@@ -322,3 +322,5 @@ hacking/ChangeLog: the small scale changelog for libspectrum
 	 has no data bytes.
 20050325 tape_block.c: avoid undefined behaviour if a ROM block has no
 	 data bytes.
+20050402 microdrive.c: don't check bad blocks when checksumming (part of
+	 patch #1161364) (Gergely Szasz).
